@@ -17,6 +17,7 @@
  380902 Setting 'work offline' doesn't go offline if busy downloading
  350999 Switching header threading collapses threads, loses selection
  353556 make underline and bold conversion more sensible
+ 353453 position of a zoomed image should depend on where user clicked on image
 
 0.120 "Plate of Shrimp"
  356329 'Save Attachments' only saves one of multiple attachments (Walt)
